# wikipedia_parser

./: .gitignore  Cargo.toml  README.md  download.sh  justfile
.github/workflows/: rust.yaml
resources/test/processed_articles/: ...Baby One More Time (album).txt  A.txt  Abraham Lincoln.txt  Achilles.txt  Alabama.txt  An American in Paris.txt  Anthropology.txt  Apollo 8.txt
resources/test/raw_articles/: ...Baby One More Time (album).txt  A.txt  Abraham Lincoln.txt  Achilles.txt  Alabama.txt  An American in Paris.txt  Anthropology.txt  Apollo 8.txt
src/: lib.rs  links.rs  main.rs  main_subgraph.rs  progress.rs  template_transformers.rs  tree.rs  wiki.rs  wikitext_parser.rs  work_queue.rs  xml_parser.rs
src/extractors/: links.rs  mod.rs
src/extractors/wikitext/: mod.rs  template_transformers.rs  wikitext_parser.rs
src/par_file/: mod.rs  tests.rs
tests/: full_doc_tests.rs
