[package]
name = "wikipedia_parser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "parser"
path = "src/main.rs"

[[bin]]
name = "subgraph-extractor"
path = "src/main_subgraph.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
html-escape = "0.2.13"
keshvar = "0.3.0"
lazy_static = "1.4.0"
nom = "7.1.3"
quick-xml = "0.31.0"
rayon = "1.8.0"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tempfile = "3.10.1"
thiserror = "1.0.58"

[profile.release]
debug = 1
